// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chevrotain ./chb/example1.chb 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Main2\\": [
      {
        \\"name\\": \\"Main2\\",
        \\"children\\": {
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"a\\",
                    \\"startOffset\\": 0,
                    \\"endOffset\\": 0,
                    \\"startLine\\": 1,
                    \\"endLine\\": 1,
                    \\"startColumn\\": 1,
                    \\"endColumn\\": 1,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ],
          \\"ToLeft\\": [
            {
              \\"image\\": \\"<-\\",
              \\"startOffset\\": 2,
              \\"endOffset\\": 3,
              \\"startLine\\": 1,
              \\"endLine\\": 1,
              \\"startColumn\\": 3,
              \\"endColumn\\": 4,
              \\"tokenTypeIdx\\": 15,
              \\"tokenType\\": {
                \\"name\\": \\"ToLeft\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 15,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"left\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"NumberLiteral\\": [
                                    {
                                      \\"image\\": \\"10\\",
                                      \\"startOffset\\": 5,
                                      \\"endOffset\\": 6,
                                      \\"startLine\\": 1,
                                      \\"endLine\\": 1,
                                      \\"startColumn\\": 6,
                                      \\"endColumn\\": 7,
                                      \\"tokenTypeIdx\\": 4,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"NumberLiteral\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 4,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ],
    \\"Main\\": [
      {
        \\"name\\": \\"Main\\",
        \\"children\\": {
          \\"left\\": [
            {
              \\"name\\": \\"Pipe\\",
              \\"children\\": {
                \\"RelationExpression\\": [
                  {
                    \\"name\\": \\"RelationExpression\\",
                    \\"children\\": {
                      \\"Expression\\": [
                        {
                          \\"name\\": \\"Expression\\",
                          \\"children\\": {
                            \\"Term\\": [
                              {
                                \\"name\\": \\"Term\\",
                                \\"children\\": {
                                  \\"Factor\\": [
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"NumberLiteral\\": [
                                          {
                                            \\"image\\": \\"100\\",
                                            \\"startOffset\\": 8,
                                            \\"endOffset\\": 10,
                                            \\"startLine\\": 2,
                                            \\"endLine\\": 2,
                                            \\"startColumn\\": 1,
                                            \\"endColumn\\": 3,
                                            \\"tokenTypeIdx\\": 4,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"NumberLiteral\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 4,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"ToRight\\": [
            {
              \\"image\\": \\"->\\",
              \\"startOffset\\": 12,
              \\"endOffset\\": 13,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 6,
              \\"tokenTypeIdx\\": 14,
              \\"tokenType\\": {
                \\"name\\": \\"ToRight\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 14,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"test\\",
                    \\"startOffset\\": 15,
                    \\"endOffset\\": 18,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 8,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Main\\",
        \\"children\\": {
          \\"left\\": [
            {
              \\"name\\": \\"Pipe\\",
              \\"children\\": {
                \\"RelationExpression\\": [
                  {
                    \\"name\\": \\"RelationExpression\\",
                    \\"children\\": {
                      \\"Expression\\": [
                        {
                          \\"name\\": \\"Expression\\",
                          \\"children\\": {
                            \\"Term\\": [
                              {
                                \\"name\\": \\"Term\\",
                                \\"children\\": {
                                  \\"Factor\\": [
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"NumberLiteral\\": [
                                          {
                                            \\"image\\": \\"200\\",
                                            \\"startOffset\\": 20,
                                            \\"endOffset\\": 22,
                                            \\"startLine\\": 3,
                                            \\"endLine\\": 3,
                                            \\"startColumn\\": 1,
                                            \\"endColumn\\": 3,
                                            \\"tokenTypeIdx\\": 4,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"NumberLiteral\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 4,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"ToRight\\": [
            {
              \\"image\\": \\"->\\",
              \\"startOffset\\": 24,
              \\"endOffset\\": 25,
              \\"startLine\\": 3,
              \\"endLine\\": 3,
              \\"startColumn\\": 5,
              \\"endColumn\\": 6,
              \\"tokenTypeIdx\\": 14,
              \\"tokenType\\": {
                \\"name\\": \\"ToRight\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 14,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"hoge\\",
                    \\"startOffset\\": 27,
                    \\"endOffset\\": 30,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 8,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Main\\",
        \\"children\\": {
          \\"left\\": [
            {
              \\"name\\": \\"Pipe\\",
              \\"children\\": {
                \\"RelationExpression\\": [
                  {
                    \\"name\\": \\"RelationExpression\\",
                    \\"children\\": {
                      \\"Expression\\": [
                        {
                          \\"name\\": \\"Expression\\",
                          \\"children\\": {
                            \\"Term\\": [
                              {
                                \\"name\\": \\"Term\\",
                                \\"children\\": {
                                  \\"Factor\\": [
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"NumberLiteral\\": [
                                          {
                                            \\"image\\": \\"300\\",
                                            \\"startOffset\\": 32,
                                            \\"endOffset\\": 34,
                                            \\"startLine\\": 4,
                                            \\"endLine\\": 4,
                                            \\"startColumn\\": 1,
                                            \\"endColumn\\": 3,
                                            \\"tokenTypeIdx\\": 4,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"NumberLiteral\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 4,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"ToRight\\": [
            {
              \\"image\\": \\"->\\",
              \\"startOffset\\": 36,
              \\"endOffset\\": 37,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 5,
              \\"endColumn\\": 6,
              \\"tokenTypeIdx\\": 14,
              \\"tokenType\\": {
                \\"name\\": \\"ToRight\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 14,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"fuga\\",
                    \\"startOffset\\": 39,
                    \\"endOffset\\": 42,
                    \\"startLine\\": 4,
                    \\"endLine\\": 4,
                    \\"startColumn\\": 8,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`chevrotain ./chb/example2.chb 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Main2\\": [
      {
        \\"name\\": \\"Main2\\",
        \\"children\\": {
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"a\\",
                    \\"startOffset\\": 0,
                    \\"endOffset\\": 0,
                    \\"startLine\\": 1,
                    \\"endLine\\": 1,
                    \\"startColumn\\": 1,
                    \\"endColumn\\": 1,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ],
          \\"ToLeft\\": [
            {
              \\"image\\": \\"<-\\",
              \\"startOffset\\": 2,
              \\"endOffset\\": 3,
              \\"startLine\\": 1,
              \\"endLine\\": 1,
              \\"startColumn\\": 3,
              \\"endColumn\\": 4,
              \\"tokenTypeIdx\\": 15,
              \\"tokenType\\": {
                \\"name\\": \\"ToLeft\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 15,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"left\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"NumberLiteral\\": [
                                    {
                                      \\"image\\": \\"1\\",
                                      \\"startOffset\\": 5,
                                      \\"endOffset\\": 5,
                                      \\"startLine\\": 1,
                                      \\"endLine\\": 1,
                                      \\"startColumn\\": 6,
                                      \\"endColumn\\": 6,
                                      \\"tokenTypeIdx\\": 4,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"NumberLiteral\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 4,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Main2\\",
        \\"children\\": {
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"c\\",
                    \\"startOffset\\": 19,
                    \\"endOffset\\": 19,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 1,
                    \\"endColumn\\": 1,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ],
          \\"ToLeft\\": [
            {
              \\"image\\": \\"<-\\",
              \\"startOffset\\": 21,
              \\"endOffset\\": 22,
              \\"startLine\\": 3,
              \\"endLine\\": 3,
              \\"startColumn\\": 3,
              \\"endColumn\\": 4,
              \\"tokenTypeIdx\\": 15,
              \\"tokenType\\": {
                \\"name\\": \\"ToLeft\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 15,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"left\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"a\\",
                                      \\"startOffset\\": 24,
                                      \\"endOffset\\": 24,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 6,
                                      \\"endColumn\\": 6,
                                      \\"tokenTypeIdx\\": 7,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 7,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              },
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"NumberLiteral\\": [
                                    {
                                      \\"image\\": \\"10\\",
                                      \\"startOffset\\": 28,
                                      \\"endOffset\\": 29,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 10,
                                      \\"endColumn\\": 11,
                                      \\"tokenTypeIdx\\": 4,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"NumberLiteral\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 4,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ],
                            \\"MultiplicationOperator\\": [
                              {
                                \\"image\\": \\"*\\",
                                \\"startOffset\\": 26,
                                \\"endOffset\\": 26,
                                \\"startLine\\": 3,
                                \\"endLine\\": 3,
                                \\"startColumn\\": 8,
                                \\"endColumn\\": 8,
                                \\"tokenTypeIdx\\": 20,
                                \\"tokenType\\": {
                                  \\"name\\": \\"Multi\\",
                                  \\"PATTERN\\": {},
                                  \\"CATEGORIES\\": [
                                    {
                                      \\"name\\": \\"MultiplicationOperator\\",
                                      \\"PATTERN\\": {},
                                      \\"tokenTypeIdx\\": 19,
                                      \\"CATEGORIES\\": [],
                                      \\"categoryMatches\\": [
                                        20,
                                        21
                                      ],
                                      \\"categoryMatchesMap\\": {
                                        \\"20\\": true,
                                        \\"21\\": true
                                      },
                                      \\"isParent\\": true
                                    }
                                  ],
                                  \\"tokenTypeIdx\\": 20,
                                  \\"categoryMatches\\": [],
                                  \\"categoryMatchesMap\\": {},
                                  \\"isParent\\": false
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Main2\\",
        \\"children\\": {
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"f\\",
                    \\"startOffset\\": 53,
                    \\"endOffset\\": 53,
                    \\"startLine\\": 6,
                    \\"endLine\\": 6,
                    \\"startColumn\\": 1,
                    \\"endColumn\\": 1,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ],
          \\"ToLeft\\": [
            {
              \\"image\\": \\"<-\\",
              \\"startOffset\\": 55,
              \\"endOffset\\": 56,
              \\"startLine\\": 6,
              \\"endLine\\": 6,
              \\"startColumn\\": 3,
              \\"endColumn\\": 4,
              \\"tokenTypeIdx\\": 15,
              \\"tokenType\\": {
                \\"name\\": \\"ToLeft\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 15,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"left\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"c\\",
                                      \\"startOffset\\": 58,
                                      \\"endOffset\\": 58,
                                      \\"startLine\\": 6,
                                      \\"endLine\\": 6,
                                      \\"startColumn\\": 6,
                                      \\"endColumn\\": 6,
                                      \\"tokenTypeIdx\\": 7,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 7,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        },
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"d\\",
                                      \\"startOffset\\": 62,
                                      \\"endOffset\\": 62,
                                      \\"startLine\\": 6,
                                      \\"endLine\\": 6,
                                      \\"startColumn\\": 10,
                                      \\"endColumn\\": 10,
                                      \\"tokenTypeIdx\\": 7,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 7,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"AdditionOperator\\": [
                        {
                          \\"image\\": \\"-\\",
                          \\"startOffset\\": 60,
                          \\"endOffset\\": 60,
                          \\"startLine\\": 6,
                          \\"endLine\\": 6,
                          \\"startColumn\\": 8,
                          \\"endColumn\\": 8,
                          \\"tokenTypeIdx\\": 18,
                          \\"tokenType\\": {
                            \\"name\\": \\"Minus\\",
                            \\"PATTERN\\": {},
                            \\"CATEGORIES\\": [
                              {
                                \\"name\\": \\"AdditionOperator\\",
                                \\"PATTERN\\": {},
                                \\"tokenTypeIdx\\": 16,
                                \\"CATEGORIES\\": [],
                                \\"categoryMatches\\": [
                                  17,
                                  18
                                ],
                                \\"categoryMatchesMap\\": {
                                  \\"17\\": true,
                                  \\"18\\": true
                                },
                                \\"isParent\\": true
                              }
                            ],
                            \\"tokenTypeIdx\\": 18,
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ],
    \\"Main\\": [
      {
        \\"name\\": \\"Main\\",
        \\"children\\": {
          \\"left\\": [
            {
              \\"name\\": \\"Pipe\\",
              \\"children\\": {
                \\"RelationExpression\\": [
                  {
                    \\"name\\": \\"RelationExpression\\",
                    \\"children\\": {
                      \\"Expression\\": [
                        {
                          \\"name\\": \\"Expression\\",
                          \\"children\\": {
                            \\"Term\\": [
                              {
                                \\"name\\": \\"Term\\",
                                \\"children\\": {
                                  \\"Factor\\": [
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"NumberLiteral\\": [
                                          {
                                            \\"image\\": \\"10\\",
                                            \\"startOffset\\": 7,
                                            \\"endOffset\\": 8,
                                            \\"startLine\\": 2,
                                            \\"endLine\\": 2,
                                            \\"startColumn\\": 1,
                                            \\"endColumn\\": 2,
                                            \\"tokenTypeIdx\\": 4,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"NumberLiteral\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 4,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              },
                              {
                                \\"name\\": \\"Term\\",
                                \\"children\\": {
                                  \\"Factor\\": [
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"NumberLiteral\\": [
                                          {
                                            \\"image\\": \\"7\\",
                                            \\"startOffset\\": 12,
                                            \\"endOffset\\": 12,
                                            \\"startLine\\": 2,
                                            \\"endLine\\": 2,
                                            \\"startColumn\\": 6,
                                            \\"endColumn\\": 6,
                                            \\"tokenTypeIdx\\": 4,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"NumberLiteral\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 4,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ],
                            \\"AdditionOperator\\": [
                              {
                                \\"image\\": \\"-\\",
                                \\"startOffset\\": 10,
                                \\"endOffset\\": 10,
                                \\"startLine\\": 2,
                                \\"endLine\\": 2,
                                \\"startColumn\\": 4,
                                \\"endColumn\\": 4,
                                \\"tokenTypeIdx\\": 18,
                                \\"tokenType\\": {
                                  \\"name\\": \\"Minus\\",
                                  \\"PATTERN\\": {},
                                  \\"CATEGORIES\\": [
                                    {
                                      \\"name\\": \\"AdditionOperator\\",
                                      \\"PATTERN\\": {},
                                      \\"tokenTypeIdx\\": 16,
                                      \\"CATEGORIES\\": [],
                                      \\"categoryMatches\\": [
                                        17,
                                        18
                                      ],
                                      \\"categoryMatchesMap\\": {
                                        \\"17\\": true,
                                        \\"18\\": true
                                      },
                                      \\"isParent\\": true
                                    }
                                  ],
                                  \\"tokenTypeIdx\\": 18,
                                  \\"categoryMatches\\": [],
                                  \\"categoryMatchesMap\\": {},
                                  \\"isParent\\": false
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"ToRight\\": [
            {
              \\"image\\": \\"->\\",
              \\"startOffset\\": 14,
              \\"endOffset\\": 15,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 8,
              \\"endColumn\\": 9,
              \\"tokenTypeIdx\\": 14,
              \\"tokenType\\": {
                \\"name\\": \\"ToRight\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 14,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"b\\",
                    \\"startOffset\\": 17,
                    \\"endOffset\\": 17,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 11,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Main\\",
        \\"children\\": {
          \\"left\\": [
            {
              \\"name\\": \\"Pipe\\",
              \\"children\\": {
                \\"RelationExpression\\": [
                  {
                    \\"name\\": \\"RelationExpression\\",
                    \\"children\\": {
                      \\"Expression\\": [
                        {
                          \\"name\\": \\"Expression\\",
                          \\"children\\": {
                            \\"Term\\": [
                              {
                                \\"name\\": \\"Term\\",
                                \\"children\\": {
                                  \\"Factor\\": [
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"Identifier\\": [
                                          {
                                            \\"image\\": \\"c\\",
                                            \\"startOffset\\": 31,
                                            \\"endOffset\\": 31,
                                            \\"startLine\\": 4,
                                            \\"endLine\\": 4,
                                            \\"startColumn\\": 1,
                                            \\"endColumn\\": 1,
                                            \\"tokenTypeIdx\\": 7,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Identifier\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 7,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"NumberLiteral\\": [
                                          {
                                            \\"image\\": \\"3\\",
                                            \\"startOffset\\": 35,
                                            \\"endOffset\\": 35,
                                            \\"startLine\\": 4,
                                            \\"endLine\\": 4,
                                            \\"startColumn\\": 5,
                                            \\"endColumn\\": 5,
                                            \\"tokenTypeIdx\\": 4,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"NumberLiteral\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 4,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"MultiplicationOperator\\": [
                                    {
                                      \\"image\\": \\"/\\",
                                      \\"startOffset\\": 33,
                                      \\"endOffset\\": 33,
                                      \\"startLine\\": 4,
                                      \\"endLine\\": 4,
                                      \\"startColumn\\": 3,
                                      \\"endColumn\\": 3,
                                      \\"tokenTypeIdx\\": 21,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Div\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"MultiplicationOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 19,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              20,
                                              21
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"20\\": true,
                                              \\"21\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 21,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"ToRight\\": [
            {
              \\"image\\": \\"->\\",
              \\"startOffset\\": 37,
              \\"endOffset\\": 38,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 7,
              \\"endColumn\\": 8,
              \\"tokenTypeIdx\\": 14,
              \\"tokenType\\": {
                \\"name\\": \\"ToRight\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 14,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"d\\",
                    \\"startOffset\\": 40,
                    \\"endOffset\\": 40,
                    \\"startLine\\": 4,
                    \\"endLine\\": 4,
                    \\"startColumn\\": 10,
                    \\"endColumn\\": 10,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Main\\",
        \\"children\\": {
          \\"left\\": [
            {
              \\"name\\": \\"Pipe\\",
              \\"children\\": {
                \\"RelationExpression\\": [
                  {
                    \\"name\\": \\"RelationExpression\\",
                    \\"children\\": {
                      \\"Expression\\": [
                        {
                          \\"name\\": \\"Expression\\",
                          \\"children\\": {
                            \\"Term\\": [
                              {
                                \\"name\\": \\"Term\\",
                                \\"children\\": {
                                  \\"Factor\\": [
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"Identifier\\": [
                                          {
                                            \\"image\\": \\"a\\",
                                            \\"startOffset\\": 42,
                                            \\"endOffset\\": 42,
                                            \\"startLine\\": 5,
                                            \\"endLine\\": 5,
                                            \\"startColumn\\": 1,
                                            \\"endColumn\\": 1,
                                            \\"tokenTypeIdx\\": 7,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Identifier\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 7,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              },
                              {
                                \\"name\\": \\"Term\\",
                                \\"children\\": {
                                  \\"Factor\\": [
                                    {
                                      \\"name\\": \\"Factor\\",
                                      \\"children\\": {
                                        \\"Identifier\\": [
                                          {
                                            \\"image\\": \\"b\\",
                                            \\"startOffset\\": 46,
                                            \\"endOffset\\": 46,
                                            \\"startLine\\": 5,
                                            \\"endLine\\": 5,
                                            \\"startColumn\\": 5,
                                            \\"endColumn\\": 5,
                                            \\"tokenTypeIdx\\": 7,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Identifier\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 7,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ],
                            \\"AdditionOperator\\": [
                              {
                                \\"image\\": \\"+\\",
                                \\"startOffset\\": 44,
                                \\"endOffset\\": 44,
                                \\"startLine\\": 5,
                                \\"endLine\\": 5,
                                \\"startColumn\\": 3,
                                \\"endColumn\\": 3,
                                \\"tokenTypeIdx\\": 17,
                                \\"tokenType\\": {
                                  \\"name\\": \\"Plus\\",
                                  \\"PATTERN\\": {},
                                  \\"CATEGORIES\\": [
                                    {
                                      \\"name\\": \\"AdditionOperator\\",
                                      \\"PATTERN\\": {},
                                      \\"tokenTypeIdx\\": 16,
                                      \\"CATEGORIES\\": [],
                                      \\"categoryMatches\\": [
                                        17,
                                        18
                                      ],
                                      \\"categoryMatchesMap\\": {
                                        \\"17\\": true,
                                        \\"18\\": true
                                      },
                                      \\"isParent\\": true
                                    }
                                  ],
                                  \\"tokenTypeIdx\\": 17,
                                  \\"categoryMatches\\": [],
                                  \\"categoryMatchesMap\\": {},
                                  \\"isParent\\": false
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"ToRight\\": [
            {
              \\"image\\": \\"->\\",
              \\"startOffset\\": 48,
              \\"endOffset\\": 49,
              \\"startLine\\": 5,
              \\"endLine\\": 5,
              \\"startColumn\\": 7,
              \\"endColumn\\": 8,
              \\"tokenTypeIdx\\": 14,
              \\"tokenType\\": {
                \\"name\\": \\"ToRight\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 14,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"right\\": [
            {
              \\"name\\": \\"To\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"e\\",
                    \\"startOffset\\": 51,
                    \\"endOffset\\": 51,
                    \\"startLine\\": 5,
                    \\"endLine\\": 5,
                    \\"startColumn\\": 10,
                    \\"endColumn\\": 10,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
